# outreach-sdk

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  README.rst  authorize.py  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst  readme.rst  reference.rst
docs/_static/: custom.css
examples/: existing_credentials_example.py
outreach_sdk/: __init__.py  auth.py  exceptions.py  session.py  types.py  urls.py
outreach_sdk/cli/: authorize.py
outreach_sdk/resources/: __init__.py  exceptions.py  resources.py  types.py  util.py
outreach_sdk/resources/data/: resources.json
scripts/: authorize.py
tests/: conftest.py  test_auth.py  test_outreach_sdk.py
tests/cli/: test_authorize.py
tests/resources/: test_resources.py
