[tool.poetry]
name = "outreach-sdk"
version = "0.6.0"
description = "Outreach API wrapper in Python"
authors = ["Cuddlemuffin007 <brennonkrogers@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.8.2"
darglint = "^1.5.8"

[tool.poetry.group.code-style.dependencies]
flake8 = "^3.8.4"
black = "^23.3.0"
isort = "^5.6.4"

[tool.poetry.group.typing.dependencies]
mypy = "^1.9.0"
pytest-mypy = "^0.8.0"
types-pygments = "^2.17.0.20240310"
types-colorama = "^0.4.15.20240311"
types-requests = "^2.31.0.20240406"
types-setuptools = "^69.5.0.20240423"

[tool.poetry.group.tests.dependencies]
pytest = "^7.1.2"
requests-mock = "^1.8.0"

[tool.poetry.group.coverage.dependencies]
coverage = {version = "^5.3", extras = ["toml"]}
codecov = "^2.1.10"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs.dependencies]
sphinx-autodoc-typehints = "^1.11.1"
sphinx = "^7.3.7"

[tool.poetry.scripts]
authorize = "outreach_sdk.cli.authorize:main"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
exclude = '''

(
  /(
      \.git                # exclude a few common directories in the
    | \.mypy_cache         # root of the project
    | \.pytest_cache
    | \.nox
  )/
)
'''

[tool.coverage.paths]
source = ["outreach_sdk"]

[tool.coverage.run]
branch = true
source = ["outreach_sdk"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
fail_under = 100
show_missing = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length=120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
