[tool.poetry]
name = "outreach-sdk"
version = "0.7.0"
description = "Outreach API wrapper in Python"
authors = ["Cuddlemuffin007 <brennonkrogers@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.25.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
darglint = "^1.5.8"

[tool.poetry.group.code-style.dependencies]
isort = "^5.6.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1.14.1"
pytest-mypy = "^0.10.3"
types-pygments = "^2.17.0.20240310"
types-colorama = "^0.4.15.20240311"
types-requests = "^2.31.0.20240406"

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"
requests-mock = "^1.8.0"

[tool.poetry.group.coverage.dependencies]
coverage = {extras = ["toml"], version = "^7.6.10"}
codecov = "^2.1.10"
pytest-cov = "^6.0.0"

[tool.poetry.group.docs.dependencies]
sphinx-autodoc-typehints = "^3.0.1"
sphinx = "^8.1.3"

[tool.poetry.scripts]
authorize = "outreach_sdk.cli.authorize:main"

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']
exclude = '''

(
  /(
      \.git
    | \.mypy_cache
    | \.pytest_cache
  )/
)
'''

[tool.coverage.paths]
source = ["outreach_sdk"]

[tool.coverage.run]
branch = true
source = ["outreach_sdk"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
fail_under = 100
show_missing = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length=120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
